fixed main nav flicker

--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -67,6 +67,7 @@ body {
   padding: 20px 0 20px 0;
 
   .container {
+
   	.logo {
   		width: 270px;
   		font-weight: bold;
@@ -91,7 +92,7 @@ body {
         li {
           display: inline; 
           margin-right: 10px; 
-          padding: 11px 16px 11px 16px;
+          padding: 11px 17px 11px 17px;
 
           a {
             color: #969595;
